Added properties removed explicit compiler plugin declaratiom

--- a/backend/src/main/resources/com/camunda/start/templates/pom.xml.vm
+++ b/backend/src/main/resources/com/camunda/start/templates/pom.xml.vm
@@ -8,6 +8,12 @@
   <artifactId>$artifact</artifactId>
   <version>$projectVersion</version>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>$javaVersion</maven.compiler.source>
+    <maven.compiler.target>$javaVersion</maven.compiler.target>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -47,16 +53,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>$springBootVersion</version>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>$javaVersion</source>
-          <target>$javaVersion</target>
-        </configuration>
       </plugin>
     </plugins>
   </build>
